# matlibrary

./: .gitignore  CMakeLists.txt  README.md
Tests/: CMakeLists.txt
Tests/Matrix Tests/: MatrixTests.cpp
include/: Matrix.cpp  Matrix.hpp
include/Matrix/: Matrix.h  append.h
matrix/: Matrix.cpp  Matrix.h
src/: CMakeLists.txt
src/Matrix/: Matrix.cpp
